--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -126,7 +126,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Wickets</h5>
-                    <p class="card-text" id="wickets">{{ wicket_taken }}</p>
+                    <p class="card-text" id="wickets">{{ total_wickets }}</p>
                 </div>
             </div>
         </div>
