fixed the bowler runs and name

--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -77,7 +77,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Current Bowler</h5>
-                    <p class="card-text">Bowler: {{ bowler }}</p>
+                    <p class="card-text">Bowler: {{ bowler.name }}</p>
                     <p class="card-text">Runs Against: {{ bowler.runs }}</p>
                 </div>
             </div>
