--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -135,11 +135,7 @@
                     <ul class="list-group">
                         <li class="list-group-item">
                             <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="Bowler1" id="Bowler1">
-                            <label class="form-check-label" for="Bowler1">Bowler1</label>
-                        </li>
-                        <li class="list-group-item">
-                            <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="Bowler2" id="Bowler2">
-                            <label class="form-check-label" for="Bowler2">Bowler2</label>
+                            <label class="form-check-label" for="Bowler1">{{ bowlers }}</label>
                         </li>
                     </ul>
                     <p>Choose your next bowler.</p>
