--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -212,9 +212,33 @@
     <!-- Wicket Button -->
     <div class="row mt-3">
         <div class="col-md-12">
-            <form method="post" action="/add_wicket">
-                <button type="submit" class="btn btn-outline-danger">Add Wicket</button>
-            </form>
+            <!-- Button to trigger modal -->
+            <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#batsmanModal">
+                Add Wicket
+            </button>
+        </div>
+    </div>
+
+    <!-- Batsman Modal -->
+    <div class="modal fade" id="batsmanModal" tabindex="-1" aria-labelledby="batsmanModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="batsmanModalLabel">Select New Batsman</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Form for selecting a batsman -->
+                    <form id="batsmanForm" method="post" action="/add_wicket">
+                        <div class="mb-3">
+                            <label for="new_batsman" class="form-label">New Batsman</label>
+                            <select class="form-select" id="new_batsman" name="new_batsman" required>
+                            </select>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
