--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -278,7 +278,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Inning</h5>
-                    <p class="card-text" id="inning">{{ is_inning_over }}</p>
+                    <p class="card-text" id="inning">{{ inning }}</p>
                 </div>
             </div>
         </div>
