fixed the current run rate for the two batsmen

--- a/templates/scorer_page.html
+++ b/templates/scorer_page.html
@@ -253,7 +253,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Current Run Rate</h5>
-                    <p class="card-text" id="current-run-rate">{{ current_run_rate }}</p>
+                    <p class="card-text" id="current-run-rate">{{ current_run_rate | round(2) }}</p>
                 </div>
             </div>
         </div>
